manifests/apps/gitea/apps/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    argocd.argoproj.io/sync-wave: '210'
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
