manifests/apps/gitea/apps/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
    app.kubernetes.io/part-of: gitea
spec:
  host: gitea.apps.ocp.kounex.com
  to:
    kind: Service
    name: gitea-http
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
